--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 </head>
 <body>
     <header>
-        <img src="IMG_0281" alt="Church Logo" style="max-height: 100px;">
+        <img src="IMG_0281.png" alt="Church Logo" style="max-height: 100px;">
         <h1>Calvary Crystal Church International</h1>
         <p>Sharing Christ. Transforming Lives. Building Families.</p>
     </header>
