--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     <header>
         <img src="IMG_0281.png" alt="Church Logo" style="max-height: 100px;">
         <h1>Calvary Crystal Church International</h1>
-        <p>Sharing Christ. Transforming Lives. Building Families.</p>
+        <p>Sharing Christ. Setting Captives Free. Transforming Lives.</p>
     </header>
     <nav>
         <a href="#welcome">Welcome</a>
